# cGAY

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  page.html
include/cGAY/: indecludes.h  renderer.h  resources.h  window.h
src/: main.cpp  renderer.cpp  resources.cpp  window.cpp
